--- a/WpfSynchronizationContext/Views/MainView.xaml
+++ b/WpfSynchronizationContext/Views/MainView.xaml
@@ -21,9 +21,21 @@
          <RowDefinition Height="Auto" />
          <RowDefinition Height="*"/>
       </Grid.RowDefinitions>
-      <Button Grid.Row="0" Content="Connect" Command="{Binding ConnectCommand}" />
-      <Button Grid.Row="1" Content="DisConnect" Command="{Binding DisconnectCommand}" />
-      <Ellipse Grid.Row="2" 
+      <!--<Button Grid.Row="0" Content="Connect" Command="{Binding ConnectCommand}" />-->
+      <Button Grid.Row="0" 
+              Content="Connect" 
+              Command="{Binding ConnectWscCommand}" 
+              CommandParameter="{Binding Tag, ElementName=ConnectionIndicator}"
+              />
+      <!--<Button Grid.Row="1" Content="Disconnect" Command="{Binding DisconnectCommand}" />-->
+      <Button Grid.Row="1"
+              Content="Disconnect"
+              Command="{Binding DisconnectWscCommand}"
+              CommandParameter="{Binding Tag, ElementName=ConnectionIndicator}"
+              />
+      <Ellipse x:Name="ConnectionIndicator"
+               Grid.Row="2" 
+               Tag="{Binding IsConnected}"
                Fill="{Binding Path=IsConnected, Converter={StaticResource BoolToFillColorConverter}}"
                ToolTip="{Binding Path=IsConnected, Converter={StaticResource BoolToToolTipConverter}}"
                Height="12" Width="12"
